[package]
name = "isocountry"
version = "0.3.2"
authors = ["Bree (formerly Brett) <sifton@users.noreply.github.com>"]
description = "ISO 3166-1 enumeration for Rust"
documentation = "http://docs.rs/isocountry"
homepage = "https://github.com/sifton/isocountry-rs"
license = "MIT"
keywords = ["iso3166", "iso3166-1", "country", "countrycode", "region"]
readme = "Readme.md"
repository = "https://github.com/sifton/isocountry-rs.git"
edition = "2018"
build = "build.rs"

[features]
serde1 = ["serde"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", optional = true }

[build-dependencies]
tinytemplate = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"