[package]
authors = ["Bree (formerly Brett) <sifton@users.noreply.github.com>"]
build = "build.rs"
description = "ISO 3166-1 enumeration for Rust"
documentation = "http://docs.rs/isocountry"
edition = "2018"
homepage = "https://github.com/sifton/isocountry-rs"
keywords = ["iso3166", "iso3166-1", "country", "countrycode", "region"]
license = "MIT"
name = "isocountry"
readme = "Readme.md"
repository = "https://github.com/sifton/isocountry-rs.git"
version = "0.3.2"

[features]
default = ["serde-integration"]
serde-integration = ["serde"]

[dependencies]
serde = {version = "1.0", optional = true}
thiserror = "1.0"

[dev-dependencies]
serde_json = {version = "1.0"}

[build-dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tinytemplate = "1.2"
